--- a/admin/css/customCss.css
+++ b/admin/css/customCss.css
@@ -36,3 +36,22 @@
   padding-right: 8px;
   padding-left: 8px;
 }
+
+#load-screen {
+  background: url(../images/loader-bg.jpg);
+  position: fixed;
+  z-index: 10000;
+  top: 0px;
+  width: 100%;
+  height: 1600px;
+}
+
+#loading {
+  width: 500px;
+  height: 500px;
+  margin: 10% auto;
+  background: url(../images/loader.gif);
+  background-size: 40%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
