--- a/admin/css/customCss.css
+++ b/admin/css/customCss.css
@@ -37,13 +37,13 @@
   padding-left: 8px;
 }
 
-#load-screen {
+/* #load-screen {
   background: url(../images/loader-bg.jpg);
   position: fixed;
   z-index: 10000;
   top: 0px;
   width: 100%;
-  height: 1600px;
+  height: 100vh;
 }
 
 #loading {
@@ -54,4 +54,4 @@
   background-size: 40%;
   background-repeat: no-repeat;
   background-position: center;
-}
+} */
